[package]
name = "tokio_tftpserver"
version = "0.1.0"
authors = ["Vincent Gerard <vincent@xenbox.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.4", features = ["full"]}
byteorder = "1.4.3"
clap = "4.2.1"

[target.'cfg(unix)'.dependencies]
privdrop = {version = "0.5.0"}
