[package]
name = "tokio_tftpserver"
version = "0.3.0"
authors = ["Vincent Gerard <vincent@xenbox.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"]}
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
privdrop = {version = "0.5.4"}
